# MCS

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PENDING_FIXES.md  README.md  README_v2.md  _measure_tokens.py  _review_diff.txt  _run_eval.py  _smoke_test.py  pyproject.toml  测试方案.md
bench/: README.md  _env.py  extraction_quality.py
docs/: INDEX.md  api-reference.md  architecture.md  configuration.md  core-flows.md  evaluation.md  faq.md  getting-started.md  graph-model-design.md  known-issues.md  mcp-server.md  memory-agent-design.md  memory-agent.md  plugin-system.md  select_facts_model_differences.md  technical-design.md
examples/: README.md  basic_usage.py  wiki_example.py
mcs/: __init__.py  rendering.py
mcs_agent/: __init__.py  __main__.py  app.py  builder.py  llm.py  loop.py  memory.py  tools.py  trace.py
mcs_mcp/: __init__.py  __main__.py  server.py
mcs_mem/: __init__.py  __main__.py  app.py  consolidation.py  diary.py  fragments.py  scheduler.py
scripts/: analyze_graph_structure.py  cross_doc_link_pass.py  diagnose_graph.py
tests/: conftest.py  test_agent_app.py  test_agent_builder.py  test_agent_llms.py  test_agent_loop.py  test_agent_memory.py  test_agent_tools.py  test_agent_trace.py  test_anti_regression.py  test_attribute_node_model.py  test_bench_doc_rerank.py  test_bench_env.py  test_bench_hotpot.py  test_bench_multihop.py  test_builder_token_counter.py  test_calibrated_estimator.py  test_capture_api.py  test_claude_count_tokens.py  test_claude_llm.py  test_community_merger.py  test_config_from_file.py  (+52 more)
(+654 files in other folders)
