[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcs"
version = "0.1.0"
description = "MCS (Maximum-Context Subgraph) — LLM-native knowledge graph engine"
requires-python = ">=3.10"
readme = "README.md"
authors = [
    {name = "MCS Team"},
]
license = {text = "MIT"}
dependencies = [
    "openai>=1.0,<2.0",
    "jieba>=0.42",
    "ujson>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]
claude = [
    "anthropic>=0.40,<1.0",
]
yaml = [
    "pyyaml>=6",
]

[tool.setuptools.packages.find]
include = ["mcs*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
]
ignore = [
    "E501",
]
